css/styles.css
.important {
  color: red;
  font-weight: bold;
  font-style: italic;
  text-align: center;
}

.column {
  width: 33%;
  float: left
}

.column img {
  box-sizing: border-box;
  display: block;
  padding: 10px;
  width: 100%;
}

img {
  border: 10px  green;
  margin: 10px;
  float: left;
  width:15%;
  height: auto;
  display: block;
  box-sizing: border-box;

}

.sidebar {
  width: 25%;
  float: right;
  padding: 10px;
  background-color: cornflowerblue;
  display:block;
  margin: 10px
}

h3 {
  color: black;
  font-style: italic;
  text-align: center;
}

h4 {
  text-align: center;
  font-style: italic;
  
}

p {
  margin: 30px;
  padding: 20px;
  font-family: sans-serif;
  font-size: medium

}

ol {
  padding: 10px;
  margin: 10px;
}

.eightyfive {
  margin-left: 15%;
  margin-right:30%;

}

